syntax = "proto3";

package auth;

service AuthService {
    rpc Authenticate (AuthenticateRequest) returns (AuthenticateResponse){}
}

message AuthenticateRequest{
    string authHeader = 1;
}

message AuthenticateResponse{
    bool valid = 1;
    uint32 userId = 2;
}
